# dwca2parquet

./: LICENSE  README.md  REFERENCE.md  pyproject.toml
.github/workflows/: ci.yml
src/dwca2parquet/: __init__.py  _convert.py  _geo.py  _meta.py  _result.py  cli.py
tests/: conftest.py  test_convert.py  test_geo.py  test_meta.py
