[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dwca2parquet"
version = "0.1.0"
description = "Convert Darwin Core Archive (DwC-A) files to Apache Parquet / GeoParquet"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyarrow>=14.0",
    "click>=8.0",
]

[project.optional-dependencies]
duckdb = ["duckdb>=0.10.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
dwca2parquet = "dwca2parquet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dwca2parquet"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
